--- a/mathOperator.html
+++ b/mathOperator.html
@@ -60,22 +60,15 @@
     <h1 class="head-right">אופרטורים חשבוניים</h1>
 
     <div class="First-Para">
-
-      + פעולת חיבור
-      <br>
-      - פעולת חיסור
-      <br>
-      / פעולה חילוק
-      <br>
-      * פעולת כפל
-      <br>
-      % מודולו - אופרטור שבעצם אומר לנו מהי שארית החלוקה של מספר במספר אחר.
-      <br>
-      () סוגריים
-      <br>
-      = השמה - זוהי בעצם פעולה שאומרת בתכנות שמה שנמצא בצד שמאל מקבל את הערך שנמצא בצד ימין.
-      <br>
-      <br>
+      <ul>
+        <li> + פעולת חיבור</li>
+        <li> - פעולת חיסור</li>
+        <li> / פעולה חילוק</li>
+        <li> * פעולת כפל</li>
+        <li> % מודולו - אופרטור שבעצם אומר לנו מהי שארית החלוקה של מספר במספר אחר.</li>
+        <li> () סוגריים</li>
+        <li> = השמה - זוהי בעצם פעולה שאומרת בתכנות שמה שנמצא בצד שמאל מקבל את הערך שנמצא בצד ימין.</li>
+      </ul>
       דוגמה למודולו:
       <br>
       7%3 = 1
